# desisky

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
benchmarks/: results_entropy_cpu.json  results_entropy_gpu.json  results_entropy_gpu_large.json  results_perlmutter_cpu.json  results_perlmutter_cpu_10k.json  results_perlmutter_gpu_10k.json  timing.py
docs/: BENCHMARKS.md  CLI_GUIDE.md  LDM_TRAINING.md  NERSC_SETUP.md  VAE_TRAINING.md
examples/: 00_broadband_testing.ipynb  00_quickstart.ipynb  01_broadband_training.ipynb  02_vae_inference.ipynb  03_vae_analysis.ipynb  04_vae_training.ipynb  05_ldm_inference.ipynb  06_ldm_training.ipynb  07_vae_wandb_training.ipynb  08_ldm_wandb_training.ipynb  09_broadband_wandb_training.ipynb
jobs/: train_broadband.sh  train_ldm_dark.sh  train_ldm_moon.sh  train_ldm_twilight.sh  train_vae.sh
notebooks/: requirements.txt  specsim_polar_comparison.ipynb
scripts/: nersc_train_vae.py  prepare_training_data.py
src/desisky/: __about__.py  __init__.py
src/desisky/data/: __init__.py  _enrich.py  _quality.py  _spectral.py  _splits.py  skyspec.py
src/desisky/inference/: __init__.py  sampling.py
src/desisky/io/: __init__.py  model_io.py
src/desisky/models/: __init__.py  broadband.py  ldm.py  vae.py
src/desisky/scripts/: infer_broadband.py  infer_ldm.py  infer_vae.py  train_broadband.py  train_ldm.py  train_vae.py
src/desisky/training/: README.md  __init__.py  dataset.py  ldm_trainer.py  trainer.py  vae_trainer.py  wandb_utils.py
src/desisky/visualization/: __init__.py  plots.py  wandb_plots.py
src/desisky/weights/: broadband_weights.eqx
tests/: conftest.py  test_cli_integration.py  test_cli_mocks.py  test_cli_scripts.py  test_data_download.py  test_enrichment.py  test_external_weights.py  test_ldm_sampling.py  test_ldm_training.py  test_model_io.py  test_spectral.py  test_splits.py  test_vae.py  test_visualization.py  test_wandb_plots.py  test_wandb_utils.py
tests/fixtures/: generate_fixtures.py  tiny_broadband.csv  tiny_conditioning.npz  tiny_spectra.npz
