[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desisky"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["astronomy", "DESI", "sky spectra", "generative model"]
authors = [
  { name = "MatthewDowicz", email = "mdowicz@uci.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "scipy",
  "requests",
  "jax",
  "equinox",
]

# ---- Optional dependency groups ----
# Base install includes CPU JAX + Equinox (inference-ready).
# cuda12 swaps in GPU JAX and adds training deps (optax, torch, tqdm).
# "all" = all optional features (CPU-safe). GPU users: pip install desisky[all,cuda12]
[project.optional-dependencies]
cuda12 = ["jax[cuda12]", "equinox", "optax", "torch", "tqdm"]
data   = ["fitsio", "pandas", "speclite", "astropy"]
viz    = ["matplotlib", "umap-learn"]
wandb  = ["wandb", "matplotlib", "pandas"]
all    = ["desisky[data,viz,wandb]", "optax", "torch", "tqdm"]


[project.scripts]
desisky-data             = "desisky.scripts.download_data:main"
desisky-train-broadband  = "desisky.scripts.train_broadband:main"
desisky-train-vae        = "desisky.scripts.train_vae:main"
desisky-train-ldm        = "desisky.scripts.train_ldm:main"
desisky-infer-broadband  = "desisky.scripts.infer_broadband:main"
desisky-infer-vae        = "desisky.scripts.infer_vae:main"
desisky-infer-ldm        = "desisky.scripts.infer_ldm:main"

[project.urls]
Documentation = "https://github.com/MatthewDowicz/desisky#readme"
Issues = "https://github.com/MatthewDowicz/desisky/issues"
Source = "https://github.com/MatthewDowicz/desisky"

[tool.hatch.version]
path = "src/desisky/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/desisky tests}"

[tool.coverage.run]
source_pkgs = ["desisky", "tests"]
branch = true
parallel = true
omit = [
  "src/desisky/__about__.py",
]

[tool.coverage.paths]
desisky = ["src/desisky", "*/desisky/src/desisky"]
tests = ["tests", "*/desisky/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
